--- a/WinApi/ScreenCapture/ScreenCapture.csproj
+++ b/WinApi/ScreenCapture/ScreenCapture.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CaptureWinApi\CaptureWinApi.csproj" />
+    <ProjectReference Include="..\DataLayer\DataLayer.csproj" />
   </ItemGroup>
 
 </Project>
